[package]
name = "maxtui"
version = "0.1.0"
edition = "2021"
authors = ["Soumalya Das"]
license = "MIT"
description = "High-performance terminal UI framework with Rust core and Python bindings"
repository = "https://github.com/programmersd/maxtui"

[dependencies]
ratatui = { version = "0.30", features = ["all-widgets", "serde"] }
crossterm = { version = "0.29", features = ["serde", "event-stream"] }
tokio = { version = "1.40", features = ["full"] }
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
ahash = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
spin_sleep = "1.1"
console = "0.15"
clap = { version = "4.5", features = ["derive"] }

[lib]
name = "maxtui"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[features]
default = ["full"]
full = []
cli = []
